Add head and unorder list in site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    hello world
+    <h1>This project working fine</h1>
+    <ul>
+        <li>Apple</li>
+        <li>Google</li>
+        <li>Facebook</li>
+    </ul>
 </body>
 </html>
